# trech

./: .gitignore  .gitmodules  AGENTS.md  CHARTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  install_torch.ps1  install_torch.sh  trech_provenance.jsonl  trech_scores.jsonl
apps/trech-cli/: main.cpp
cmake/: TrechFindOrFetch.cmake  TrechOptions.cmake  TrechWarnings.cmake
data/: optics_handbook_anchors.json  optics_surrogate_ridge.json
docs/: implementation.md  notes.md  output_schema.md  scenario_hooks.md  structure.md  testscenario_osmotic-todo.md  testscenario_pascal-todo.md  trech-roadmap.md  validation_glass_of_water.json  validation_glass_of_water.md  validation_optics_surrogate.json  validation_optics_surrogate.md  validation_report.json  validation_report.md  validation_summary.md  viz_refraction.md
docs/CNT/: BackToTheCarbon.md
docs/benchmarks/: validation_glass_of_water.txt  validation_optics_surrogate.txt
docs/geant4-docs/: Geant4InstallationGuide.html  IntroductionToGeant4.html  PhysicsListGuide.html
examples/experiments/: cnt_band_structure.js  config_chemistry_stub.js  config_cnt_optics_stub.js  config_cnt_stub.js  config_cnt_world_stub.js  config_flow_language.js  config_hook_dispatch.js  config_multi_beam_units.js  config_multiscale_stub.js  config_nitrogen_carbon_cycle.js  config_optics.js  config_stratify.js  config_stratify_ml.js  glass_of_water_spectral.js  glass_of_water_varied.js  h2o_bulk_water.js  h2o_cluster_fluid.js  h2o_diffusion_temperature.js  h2o_fluid.js  h2o_fluid_spec.md  h2o_molecule_stability.js  h2o_optics_beam.js  h2o_single_molecule.js  hello_world.js  include_error_demo.js  include_error_helper.js  optics_surrogate_demo.js  optics_training_panel.js  testscenario_osmotic.js  testscenario_pascal.js  trech_helpers.js  trech_water_md.js  validation_glass_of_water.js  viz_refraction_demo.js  water_box.js
examples/lab/: realtime_lab_bootstrap.json  realtime_lab_commands.jsonl
examples/macros/: minimal.mac
include/trech/chem/: DnaChemistry.hpp
include/trech/core/: Config.hpp  LabSession.hpp  Provenance.hpp  RunOptions.hpp
include/trech/js/: JsRuntime.hpp
include/trech/ml/: EventFeatures.hpp  FeaturePipeline.hpp  OnlineEventStats.hpp  OpticsSurrogate.hpp  Stratifier.hpp  TorchScriptStub.hpp
include/trech/sim/: ActionInitialization.hpp  DetectorConstruction.hpp  EventAction.hpp  GeantRunner.hpp  MolecularOptics.hpp  MultiscaleBridge.hpp  NuclearCycleAnalyzer.hpp  PrimaryGeneratorAction.hpp  RunAction.hpp  SteppingAction.hpp  VizRecorder.hpp
scripts/: degeneration_metrics.py  run_smoke.sh  run_validation.sh  run_validation_suite.sh  update_validation_summary.py  validate_glass_of_water.py  validate_optics_surrogate.py
src/chem/: DnaChemistry.cpp
src/core/: Config.cpp  LabSession.cpp  Provenance.cpp  RunOptions.cpp
src/js/: JsRuntime.cpp  TrechJsApi.cpp
src/ml/: FeaturePipeline.cpp  OnlineEventStats.cpp  OpticsSurrogate.cpp  Stratifier.cpp  TorchScriptStub.cpp
src/sim/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  GeantRunner.cpp  MolecularOptics.cpp  MultiscaleBridge.cpp  NuclearCycleAnalyzer.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp  VizRecorder.cpp
tests/: CMakeLists.txt  test_cli_parse.cpp  test_config_roundtrip.cpp  test_dna_chemistry_bridge.cpp  test_js_runtime.cpp  test_lab_session.cpp  test_nuclear_cycle_analyzer.cpp  test_optics_surrogate.cpp  test_provenance_writer.cpp  test_stratifier.cpp
thirds/: README.md
thirds/geant4/: README.md
thirds/json/: README.md
thirds/quickjs/: CMakeLists.txt  README.md
tools/torch/: README.md  pyproject.toml
tools/torch/trech_torch/: __init__.py  train_optics_surrogate.py
tools/validation/: README.md  pyproject.toml
tools/validation/trech_validation/: __init__.py  __main__.py  cases.py  report.py  runner.py
tools/viz/: README.md  pyproject.toml
tools/viz/demos/: README.md  render_bulk_water.py  render_cnt_band_structure.py  render_diffusion_temperature.py  render_glass_of_water.py
tools/viz/trech_viz/: __init__.py  __main__.py  renderer.py  scene.py  trajectories.py
tools/viz/trech_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
